refactor the pages with flex display layout

--- a/about.html
+++ b/about.html
@@ -18,10 +18,13 @@
 
     <body>
         <!-- This the header part-->
-        <header>
-            <img src="img/logo-202x48.png"
+        <!-- This the header part-->
+        <header class="page-header">
+
+            <img src="img/logo-202x48.png" class="page-header_item"
                 alt="Personal logo of Mezekr, a text logo with my name">
-            <nav>
+
+            <nav class="man-navigation page-header_item">
                 <ul role="menubar" class="navigation-list">
                     <li role="presentation">
                         <a href="index.html" role="menuitem"
@@ -35,73 +38,83 @@
                             role="menuitem"
                             class="navigation-list_item">Contact</a>
                     </li>
+                    <li role="presentation"><a href="work.html" role="menuitem"
+                            class="navigation-list_item">Work</a>
+                    </li>
                 </ul>
             </nav>
         </header>
-        <main>
-            <h1>About Me</h1>
-            <div>
-                <p>
-                    I'am a web developer from Eritrea living in Germany. I am
-                    passionate
-                    about all new and cool web stuff. <br>
-                    I lone to learn about new web technologies and playing
-                    aswell as watching football.
-                </p>
-            </div>
-            <h2>Here are more about me.</h2>
-            <p>There are things I like to do</p>
-            <ul>
-                <li>Fontend Developement</li>
-                <li>Backend Developement</li>
-                <li>Code writing/programming </li>
-                <li>Play and watch football.</li>
-            </ul>
-            <h2>My path to became a web developer</h2>
-            <ul>
-                <li>First step</li>
-                <li>second step</li>
-                <li>Third step </li>
-                <li>CarerFoundry web developent course</li>
-            </ul>
 
-            <table>
-                <caption>My Web developent Skills and Expriences </caption>
-                <thead>
-                    <tr>
-                        <th scope="col">Skills</th>
-                        <th scope="col">Years of Exerience</th>
-                        <th scope="col">Level of Expertise</th>
-                    </tr>
-                </thead>
-                <tbody>
-                    <tr>
-                        <td> HTMl</td>
-                        <td>1</td>
-                        <td>Intermidate</td>
-                    </tr>
-                    <tr>
-                        <td>CSS</td>
-                        <td>1</td>
-                        <td>Intermidate</td>
-                    </tr>
-                    <tr>
-                        <td>Javascript</td>
-                        <td> 1</td>
-                        <td>beginner</td>
-                    </tr>
-                </tbody>
-                <tfoot>
-                    <tr>
-                        <td colspan="3">I learning more..</td>
-                    </tr>
-                </tfoot>
+        <!-- This the main part-->
+        <section class="profile">
+            <main>
+                <h1>About Me</h1>
+                <div>
+                    <p>
+                        I'am a web developer from Eritrea living in Germany. I
+                        am
+                        passionate
+                        about all new and cool web stuff. <br>
+                        I lone to learn about new web technologies and playing
+                        aswell as watching football.
+                    </p>
+                </div>
+                <h2>Here are more about me.</h2>
+                <p>There are things I like to do</p>
+                <ul>
+                    <li>Fontend Developement</li>
+                    <li>Backend Developement</li>
+                    <li>Code writing/programming </li>
+                    <li>Play and watch football.</li>
+                </ul>
+                <h2>My path to became a web developer</h2>
+                <ul>
+                    <li>First step</li>
+                    <li>second step</li>
+                    <li>Third step </li>
+                    <li>CarerFoundry web developent course</li>
+                </ul>
 
-            </table>
-        </main>
-        <footer>
-            <p>Follow me </p>
-            <div>
+                <table>
+                    <caption>My Web developent Skills and Expriences </caption>
+                    <thead>
+                        <tr>
+                            <th scope="col">Skills</th>
+                            <th scope="col">Years of Exerience</th>
+                            <th scope="col">Level of Expertise</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        <tr>
+                            <td> HTMl</td>
+                            <td>1</td>
+                            <td>Intermidate</td>
+                        </tr>
+                        <tr>
+                            <td>CSS</td>
+                            <td>1</td>
+                            <td>Intermidate</td>
+                        </tr>
+                        <tr>
+                            <td>Javascript</td>
+                            <td> 1</td>
+                            <td>beginner</td>
+                        </tr>
+                    </tbody>
+                    <tfoot>
+                        <tr>
+                            <td colspan="3">I learning more..</td>
+                        </tr>
+                    </tfoot>
+
+                </table>
+            </main>
+        </section>
+
+        <!-- This the footer part-->
+        <footer class="page-footer">
+            <p>Follow me on </p>
+            <div class="social-media">
                 <a href="https://github.com/" target="_blank">
                     <img src="img/github_icon.svg" alt="github icon">
                 </a>
