--- a/contact.html
+++ b/contact.html
@@ -18,10 +18,12 @@
 
     <body>
         <!-- This the header part-->
-        <header>
-            <img src="img/logo-202x48.png"
+        <header class="page-header">
+
+            <img src="img/logo-202x48.png" class="page-header_item"
                 alt="Personal logo of Mezekr, a text logo with my name">
-            <nav>
+
+            <nav class="man-navigation page-header_item">
                 <ul role="menubar" class="navigation-list">
                     <li role="presentation">
                         <a href="index.html" role="menuitem"
@@ -35,9 +37,14 @@
                             role="menuitem"
                             class="navigation-list_item">Contact</a>
                     </li>
+                    <li role="presentation"><a href="work.html" role="menuitem"
+                            class="navigation-list_item">Work</a>
+                    </li>
                 </ul>
             </nav>
         </header>
+
+        <!-- This the main part-->
         <main>
             <div>
                 Mezekr w. <br>
@@ -91,9 +98,10 @@
             </form>
         </main>
 
-        <footer>
-            <p>Follow me </p>
-            <div>
+        <!-- This the footer part-->
+        <footer class="page-footer">
+            <p>Follow me on </p>
+            <div class="social-media">
                 <a href="https://github.com/" target="_blank">
                     <img src="img/github_icon.svg" alt="github icon">
                 </a>
