--- a/index.html
+++ b/index.html
@@ -18,10 +18,12 @@
 
     <body>
         <!-- This the header part-->
-        <header>
-            <img src="img/logo-202x48.png"
+        <header class="page-header">
+
+            <img src="img/logo-202x48.png" class="page-header_item"
                 alt="Personal logo of Mezekr, a text logo with my name">
-            <nav>
+
+            <nav class="man-navigation page-header_item">
                 <ul role="menubar" class="navigation-list">
                     <li role="presentation">
                         <a href="index.html" role="menuitem"
@@ -35,32 +37,39 @@
                             role="menuitem"
                             class="navigation-list_item">Contact</a>
                     </li>
+                    <li role="presentation"><a href="work.html" role="menuitem"
+                            class="navigation-list_item">Work</a>
+                    </li>
                 </ul>
             </nav>
         </header>
 
         <!-- This the main part-->
-        <main>
-            <div>
-                <img src="img/example-profile_photo-165x200.jpg "
-                    alt="My photograph">
-            </div>
-            <div>
-                <h1>Hello World!</h1>
-                <p>My name is Mezekr W.</p>
-                <p> I am <span>Web</span> developer</p>
-                <a href="https://github.com/" target="_blank">Check out some of
-                    my code</a>
-            </div>
-
+        <section class="profile">
+            <main>
+                <div>
+                    <img src="img/example-profile_photo-165x200.jpg "
+                        class="profile_portrait"
+                        alt="Mezekr profile portraitphotograph">
+                </div>
+                <div>
+                    <h1>Hello World!</h1>
+                    <p>My name is Mezekr W.</p>
+                    <p> I am <span>Web</span> developer</p>
+                    <a href="https://github.com/" target="_blank">Check out some
+                        of
+                        my code</a>
+                </div>
+            </main>
             <!-- This is just example button -->
-            <button type="button" href="about.html"> Example Button</button>
-        </main>
+            <button type="button" class="button-example"> Example
+                Button</button>
+        </section>
 
         <!-- This the footer part-->
-        <footer>
-            <p>Follow me </p>
-            <div>
+        <footer class="page-footer">
+            <p>Follow me on </p>
+            <div class="social-media">
                 <a href="https://github.com/" target="_blank">
                     <img src="img/github_icon.svg" alt="github icon">
                 </a>
