--- a/work.html
+++ b/work.html
@@ -37,6 +37,9 @@
                             role="menuitem"
                             class="navigation-list_item">Contact</a>
                     </li>
+                    <li role="presentation"><a href="work.html" role="menuitem"
+                            class="navigation-list_item">Work</a>
+                    </li>
                 </ul>
             </nav>
         </header>
