final update of all pages

--- a/about.html
+++ b/about.html
@@ -18,7 +18,6 @@
 
     <body>
         <!-- This the header part-->
-        <!-- This the header part-->
         <header class="page-header">
 
             <img src="img/logo-202x48.png" class="page-header_item"
@@ -46,69 +45,67 @@
         </header>
 
         <!-- This the main part-->
-        <section class="profile">
-            <main>
+        <section>
+            <div>
                 <h1>About Me</h1>
                 <div>
                     <p>
-                        I'am a web developer from Eritrea living in Germany. I
-                        am
-                        passionate
-                        about all new and cool web stuff. <br>
+                        I am a web developer from Eritrea living in Germany. I
+                        am passionate about all new and cool web stuff. <br>
                         I lone to learn about new web technologies and playing
                         aswell as watching football.
                     </p>
                 </div>
                 <h2>Here are more about me.</h2>
                 <p>There are things I like to do</p>
-                <ul>
+                <ul class="skills-list">
                     <li>Fontend Developement</li>
                     <li>Backend Developement</li>
                     <li>Code writing/programming </li>
                     <li>Play and watch football.</li>
                 </ul>
                 <h2>My path to became a web developer</h2>
-                <ul>
+                <ul class="skills-list">
                     <li>First step</li>
                     <li>second step</li>
                     <li>Third step </li>
                     <li>CarerFoundry web developent course</li>
                 </ul>
+            </div>
+            <table>
+                <caption>My Web developent Skills and Expriences </caption>
+                <thead>
+                    <tr>
+                        <th scope="col">Skills</th>
+                        <th scope="col">Years of Exerience</th>
+                        <th scope="col">Level of Expertise</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr>
+                        <td> HTMl</td>
+                        <td>1</td>
+                        <td>Intermidate</td>
+                    </tr>
+                    <tr>
+                        <td>CSS</td>
+                        <td>1</td>
+                        <td>Intermidate</td>
+                    </tr>
+                    <tr>
+                        <td>Javascript</td>
+                        <td> 1</td>
+                        <td>beginner</td>
+                    </tr>
+                </tbody>
+                <tfoot>
+                    <tr>
+                        <td colspan="3">I learning more..</td>
+                    </tr>
+                </tfoot>
 
-                <table>
-                    <caption>My Web developent Skills and Expriences </caption>
-                    <thead>
-                        <tr>
-                            <th scope="col">Skills</th>
-                            <th scope="col">Years of Exerience</th>
-                            <th scope="col">Level of Expertise</th>
-                        </tr>
-                    </thead>
-                    <tbody>
-                        <tr>
-                            <td> HTMl</td>
-                            <td>1</td>
-                            <td>Intermidate</td>
-                        </tr>
-                        <tr>
-                            <td>CSS</td>
-                            <td>1</td>
-                            <td>Intermidate</td>
-                        </tr>
-                        <tr>
-                            <td>Javascript</td>
-                            <td> 1</td>
-                            <td>beginner</td>
-                        </tr>
-                    </tbody>
-                    <tfoot>
-                        <tr>
-                            <td colspan="3">I learning more..</td>
-                        </tr>
-                    </tfoot>
+            </table>
 
-                </table>
-            </main>
         </section>
 
         <!-- This the footer part-->
