--- a/contact.html
+++ b/contact.html
@@ -59,7 +59,8 @@
                 <a href="mailto:examplamail@tuta.com">Contact me</a>
             </div>
             <h1> Subscribe to my new newsletter </h1>
-            <form action="/user-registration-form.html" method="post">
+            <form action="/user-registration-form.html" method="post"
+                id="registration-form">
                 <fieldset>
                     <legend> Personal Data </legend>
                     <label for="firstname">Enter your First name:
