--- a/work.html
+++ b/work.html
@@ -19,10 +19,8 @@
     <body>
         <!-- This the header part-->
         <header class="page-header">
-
             <img src="img/logo-202x48.png" class="page-header_item"
                 alt="Personal logo of Mezekr, a text logo with my name">
-
             <nav class="man-navigation page-header_item">
                 <ul role="menubar" class="navigation-list">
                     <li role="presentation">
@@ -49,7 +47,7 @@
             <h1>Work</h1>
             <p>Here are some of the projects I have completed and am currently
                 working on.</p>
-            <dir class="grid-layout">
+            <div class="grid-layout">
 
                 <div class="grid-layout_item">
                     <h2>Project one</h2>
@@ -89,7 +87,7 @@
                     <a href="#"> See project on Github</a>
                 </div>
 
-            </dir>
+            </div>
         </section>
 
         <!-- This the footer part-->
