update profile section in index page

--- a/index.html
+++ b/index.html
@@ -43,26 +43,26 @@
         </header>
 
         <!-- This the main part-->
-        <section class="profile">
-            <main>
+        <main>
+            <section class="profile">
                 <div>
                     <img src="img/example-profile_photo-400x400.jpg "
                         class="profile_portrait"
                         alt="Mezekr profile portraitphotograph">
                 </div>
-                <div>
+                <div class="profile-text">
                     <h1>Hello World!</h1>
                     <p>My name is Mezekr W.</p>
                     <p> I am <span>Web</span> developer</p>
                     <a href="https://github.com/" target="_blank">Check out some
-                        of
-                        my code</a>
+                        of my code</a>
                 </div>
-            </main>
-            <!-- This is just example button -->
-            <button type="button" class="button-example"> Example
-                Button</button>
-        </section>
+                <button type="button" class="button-example"> Example
+                    Button</button>
+            </section>
+        </main>
+        <!-- This is just example button -->
+
 
         <!-- This the footer part-->
         <footer class="page-footer">
