--- a/work.html
+++ b/work.html
@@ -44,12 +44,12 @@
 
         <!-- This the main part-->
         <section>
-            <h1>Work</h1>
+            <h1>Work (Projects) </h1>
             <p>Here are some of the projects I have completed and am currently
                 working on.</p>
-            <div class="grid-layout">
+            <div class="projects-grid-container">
 
-                <div class="grid-layout_item">
+                <div class="projects-grid-item">
                     <h2>Project one</h2>
                     <p>
                         As I web Developement student, I applied Html, css ,what
@@ -59,7 +59,7 @@
                     <a href="#"> See project on Github</a>
                 </div>
 
-                <div class="grid-layout_item">
+                <div class="projects-grid-item">
                     <h2>Project two</h2>
                     <p>
                         As I web Developement student, I applied Html, css ,what
@@ -68,7 +68,7 @@
                     </p>
                     <a href="#"> See project on Github</a>
                 </div>
-                <div class="grid-layout_item">
+                <div class="projects-grid-item">
                     <h2>Project three</h2>
                     <p>
                         As I web Developement student, I applied Html, css ,what
@@ -77,7 +77,7 @@
                     </p>
                     <a href="#"> See project on Github</a>
                 </div>
-                <div class="grid-layout_item">
+                <div class="projects-grid-item">
                     <h2>Project four</h2>
                     <p>
                         As I web Developement student, I applied Html, css ,what
