add more projects on work page

--- a/work.html
+++ b/work.html
@@ -86,7 +86,33 @@
                     </p>
                     <a href="#"> See project on Github</a>
                 </div>
-
+                <div class="projects-grid-item">
+                    <h2>Project five</h2>
+                    <p>
+                        As I web Developement student, I applied Html, css ,what
+                        I have so far learned to create this first reponsive
+                        website
+                    </p>
+                    <a href="#"> See project on Github</a>
+                </div>
+                <div class="projects-grid-item">
+                    <h2>Project six</h2>
+                    <p>
+                        As I web Developement student, I applied Html, css ,what
+                        I have so far learned to create this first reponsive
+                        website
+                    </p>
+                    <a href="#"> See project on Github</a>
+                </div>
+                <div class="projects-grid-item">
+                    <h2>Project seven</h2>
+                    <p>
+                        As I web Developement student, I applied Html, css ,what
+                        I have so far learned to create this first reponsive
+                        website
+                    </p>
+                    <a href="#"> See project on Github</a>
+                </div>
             </div>
         </section>
 
