refactor  the main part of about page

--- a/about.html
+++ b/about.html
@@ -45,15 +45,15 @@
         </header>
 
         <!-- This the main part-->
-        <section>
+        <main>
             <div>
                 <h1>About Me</h1>
                 <div>
                     <p>
-                        I am a web developer from Eritrea living in Germany. I
-                        am passionate about all new and cool web stuff. <br>
-                        I lone to learn about new web technologies and playing
-                        aswell as watching football.
+                        I am a web developer from Eritrea living in Germany.
+                        I am passionate about all new and cool web stuff. <br>
+                        I lone to learn about new web technologies and
+                        playing aswell as watching football.
                     </p>
                 </div>
                 <h2>Here are more about me.</h2>
@@ -71,43 +71,45 @@
                     <li>Third step </li>
                     <li>CarerFoundry web developent course</li>
                 </ul>
+
+                <table>
+                    <caption> Table 1. My Web developent Skills and Expriences
+                    </caption>
+                    <thead>
+                        <tr>
+                            <th scope="col">Skills</th>
+                            <th scope="col">Years of Exerience</th>
+                            <th scope="col">Level of Expertise</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        <tr>
+                            <td> HTMl</td>
+                            <td>1</td>
+                            <td>Intermidate</td>
+                        </tr>
+                        <tr>
+                            <td>CSS</td>
+                            <td>1</td>
+                            <td>Intermidate</td>
+                        </tr>
+                        <tr>
+                            <td>Javascript</td>
+                            <td> 1</td>
+                            <td>beginner</td>
+                        </tr>
+                    </tbody>
+                    <tfoot>
+                        <tr>
+                            <td colspan="3">I learning more..</td>
+                        </tr>
+                    </tfoot>
+                </table>
+
+                <a href="file/cv.pdf" class="button" download> Download my
+                    CV</a>
             </div>
-            <table>
-                <caption>My Web developent Skills and Expriences </caption>
-                <thead>
-                    <tr>
-                        <th scope="col">Skills</th>
-                        <th scope="col">Years of Exerience</th>
-                        <th scope="col">Level of Expertise</th>
-                    </tr>
-                </thead>
-                <tbody>
-                    <tr>
-                        <td> HTMl</td>
-                        <td>1</td>
-                        <td>Intermidate</td>
-                    </tr>
-                    <tr>
-                        <td>CSS</td>
-                        <td>1</td>
-                        <td>Intermidate</td>
-                    </tr>
-                    <tr>
-                        <td>Javascript</td>
-                        <td> 1</td>
-                        <td>beginner</td>
-                    </tr>
-                </tbody>
-                <tfoot>
-                    <tr>
-                        <td colspan="3">I learning more..</td>
-                    </tr>
-                </tfoot>
-
-            </table>
-
-        </section>
-
+        </main>
         <!-- This the footer part-->
         <footer class="page-footer">
             <p>Follow me on </p>
