--- a/work.html
+++ b/work.html
@@ -21,22 +21,25 @@
         <header class="page-header">
             <img src="img/logo-202x48.png" class="page-header_item"
                 alt="Personal logo of Mezekr, a text logo with my name">
-            <nav class="man-navigation page-header_item">
+            <nav class="main-navigation page-header_item">
                 <ul role="menubar" class="navigation-list">
                     <li role="presentation">
                         <a href="index.html" role="menuitem"
-                            class="navigation-list_item navigation-list_item--active">Home</a>
+                            class="navigation-list_item ">Home</a>
                     </li>
                     <li role="presentation">
                         <a href="about.html" role="menuitem"
-                            class="navigation-list_item">About me</a>
+                            class="navigation-list_item ">About
+                            me</a>
                     </li>
                     <li role="presentation"><a href="contact.html"
                             role="menuitem"
-                            class="navigation-list_item">Contact</a>
+                            class="navigation-list_item ">Contact
+                            me</a>
                     </li>
                     <li role="presentation"><a href="work.html" role="menuitem"
-                            class="navigation-list_item">Work</a>
+                            class="navigation-list_item navigation-list_item--active">My
+                            Work</a>
                     </li>
                 </ul>
             </nav>
