rename the navigation bar item

--- a/index.html
+++ b/index.html
@@ -29,14 +29,14 @@
                     </li>
                     <li role="presentation">
                         <a href="about.html" role="menuitem"
-                            class="navigation-list_item">About me</a>
+                            class="navigation-list_item">About</a>
                     </li>
                     <li role="presentation"><a href="contact.html"
-                            role="menuitem" class="navigation-list_item">Contact
-                            me</a>
+                            role="menuitem"
+                            class="navigation-list_item">Contact</a>
                     </li>
                     <li role="presentation"><a href="work.html" role="menuitem"
-                            class="navigation-list_item">My Work</a>
+                            class="navigation-list_item">Work</a>
                     </li>
                 </ul>
             </nav>
