--- a/work.html
+++ b/work.html
@@ -29,16 +29,14 @@
                     </li>
                     <li role="presentation">
                         <a href="about.html" role="menuitem"
-                            class="navigation-list_item ">About
-                            me</a>
+                            class="navigation-list_item ">About</a>
                     </li>
                     <li role="presentation"><a href="contact.html"
                             role="menuitem"
-                            class="navigation-list_item ">Contact
-                            me</a>
+                            class="navigation-list_item ">Contact</a>
                     </li>
                     <li role="presentation"><a href="work.html" role="menuitem"
-                            class="navigation-list_item navigation-list_item--active">My
+                            class="navigation-list_item navigation-list_item--active">
                             Work</a>
                     </li>
                 </ul>
