--- a/contact.html
+++ b/contact.html
@@ -13,7 +13,8 @@
             rel="stylesheet">
         <link rel="stylesheet"
             href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css">
-        <link rel="stylesheet" href="css/style.production.css">
+        <!-- <link rel="stylesheet" href="css/style.production.css"> -->
+        <link rel="stylesheet" href="css/styles.css">
     </head>
 
     <body>
