--- a/index.html
+++ b/index.html
@@ -20,9 +20,9 @@
     <body>
         <!-- This the header part-->
         <header class="page-header">
-            <img src="img/logo-202x48.png" class="page-header_item"
-                alt="Personal logo of Mezekr, a text logo with my name">
-            <nav class="main-navigation page-header_item">
+            <img src="img/logo-202x48.png"
+                alt=" Personal logo of Mezekr, a text logo with my name">
+            <nav class="main-navigation">
                 <ul role="menubar" class="navigation-list">
                     <li role="presentation">
                         <a href="index.html" role="menuitem"
